<resources>
    <string name="app_name">ROOMDatabase</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  -->
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="action_delete">Delete</string>

</resources>